# portfolio-site

./: MANIFEST.in  README.md  setup.cfg  wsgi.py
portfolio/: app.py  cli.py  config.py  portfolio.py  repo.py
portfolio/static/styles/: main.css
portfolio/templates/: about.html  base.html  chess.html  contact.html  gamelib.html  index.html  lesser-skills.html  navbar.html  top-skills.html
templates/: base.html  contact.html  gamelib.html  index.html  lesser-skills.html  top-skills.html
