[metadata]
name = portfolio
version = 0.0.1
description = my portfolio website
author = Jeffrey Pepin
url = https://github.com/peffjepin/portfolio-site

[options]
packages =
    portfolio
install_requires =
    flask==2.0.0
    sqlalchemy==1.4.0
    pymysql==1.0.2
    cryptography==36.0.0
python_requires = >= 3.8
zip_safe = no
